--- a/B8.2.1/docker-compose.yml
+++ b/B8.2.1/docker-compose.yml
@@ -4,6 +4,13 @@ services:
   web:
     build: ./app
     ports:
-      - "5000:5000"
+      - "127.0.0.1:5000:5000"
+    depends_on:
+      - redis
+
   redis:
     image: "redis:alpine"
+    volumes:
+      - "redis-data:/data"
+volumes:
+  redis-data:
