--- a/B8.2.1/docker-compose.yml
+++ b/B8.2.1/docker-compose.yml
@@ -7,10 +7,18 @@ services:
       - "127.0.0.1:5000:5000"
     depends_on:
       - redis
+    networks:
+      - net
 
   redis:
     image: "redis:alpine"
     volumes:
-      - "redis-data:/data"
+      - redis-data:/data
+    networks:
+      - net
+
+networks:
+  net:
+
 volumes:
   redis-data:
