--- a/B8.2.1/docker-compose.yml
+++ b/B8.2.1/docker-compose.yml
@@ -1,21 +1,36 @@
 version: "3.9"
 
+x-logging: &logging
+ driver: "json-file"
+ options:
+   max-size: "1000m"
+   max-file: "1"
+
 services:
   web:
     build: ./app
     ports:
-      - "127.0.0.1:5000:5000"
+      - "127.0.0.1:${WEB_PORT:-5000}:5000"
     depends_on:
       - redis
+    restart: unless-stopped
     networks:
       - net
+    logging: *logging
 
-  redis:
+  redis:      
     image: "redis:alpine"
     volumes:
       - redis-data:/data
+    restart: unless-stopped
     networks:
       - net
+    logging: *logging
+    deploy:
+     resources:
+       limits:
+         cpus: "${DOCKER_WEB_CPUS:-0}"
+         memory: "${DOCKER_WEB_MEMORY:-0}"
 
 networks:
   net:
