--- a/B8.2.1/docker-compose.yml
+++ b/B8.2.1/docker-compose.yml
@@ -12,7 +12,8 @@ services:
     ports:
       - "127.0.0.1:${WEB_PORT:-5000}:5000"
     depends_on:
-      - redis
+      redis:
+        condition: service_healthy
     restart: unless-stopped
     networks:
       - net
@@ -31,6 +32,11 @@ services:
        limits:
          cpus: "${DOCKER_WEB_CPUS:-0}"
          memory: "${DOCKER_WEB_MEMORY:-0}"
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 1s
+      timeout: 3s
+      retries: 10
 
 networks:
   net:
